// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create an individual user for the session 1`] = `
Object {
  "currentUser": Array [
    Object {
      "DisciplineName": "Structural Engineering",
      "Email": "Sam.Styles@arup.com",
      "GradeLevel": 6,
      "JobTitle": "Senior Engineer",
      "LocationName": "Manchester Office",
      "StaffID": 37704,
      "StaffName": "Sam Styles",
      "StartDate": "2007-09-05T23:00:00.000Z",
      "careerStart": null,
      "committees": null,
      "highLevelDescription": null,
      "imgURL": null,
      "nationality": null,
      "professionalAssociations": null,
      "publications": null,
      "qualifications": null,
      "valueStatement": null,
    },
  ],
  "isLoading": true,
}
`;

exports[`should create an individual user for the session 2`] = `
Array [
  Object {
    "currentUser": Array [
      Object {
        "DisciplineName": "Structural Engineering",
        "Email": "Sam.Styles@arup.com",
        "GradeLevel": 6,
        "JobTitle": "Senior Engineer",
        "LocationName": "Manchester Office",
        "StaffID": 37704,
        "StaffName": "Samuel Styles",
        "StartDate": "2007-09-05T23:00:00.000Z",
        "careerStart": null,
        "committees": null,
        "highLevelDescription": null,
        "imgURL": null,
        "nationality": null,
        "professionalAssociations": null,
        "publications": null,
        "qualifications": null,
        "valueStatement": null,
      },
    ],
    "isLoading": true,
  },
  Object {
    "currentUser": Array [
      Object {
        "DisciplineName": "Structural Engineering",
        "Email": "Sam.Styles@arup.com",
        "GradeLevel": 6,
        "JobTitle": "Senior Engineer",
        "LocationName": "Manchester Office",
        "StaffID": 37704,
        "StaffName": "Sam Styles",
        "StartDate": "2007-09-05T23:00:00.000Z",
        "careerStart": null,
        "committees": null,
        "highLevelDescription": null,
        "imgURL": null,
        "nationality": null,
        "professionalAssociations": null,
        "publications": null,
        "qualifications": null,
        "valueStatement": null,
      },
    ],
    "isLoading": true,
  },
]
`;
